fixed scrollbar bug in firefox

--- a/src/Components/Utilities.scss
+++ b/src/Components/Utilities.scss
@@ -1,9 +1,9 @@
 .invisible-scroll::-webkit-scrollbar { width: 0 !important }
 
 .invisible-scroll {
+    scrollbar-width: none;
     overflow-x: hidden;
     overflow-y: scroll;
-    overflow-y: -moz-scrollbars-none;
     -ms-overflow-style: none;
 }
 
